# compose-desktop-containers

./: .gitignore  .gitmodules  Makefile  README.md  TODO.md  apps  bin  images  pyproject.toml
apps/Audio/: spotify.yaml
apps/Development/: python-develop.yaml
apps/Graphics/: affinity.yaml  blender.yaml
apps/Network/: discord.yaml  google-chrome.yaml  slack.yaml  zoom.yaml
apps/Office/: microsoft365.yaml
apps/Science/: httk-console.yaml  httk-dev-console.yaml  httk-devel.yaml
apps/Utility/: flashprint.yaml  obsidian.yaml  ollama.yaml  ollama2.yaml  orcaslicer.yaml
generic/generic-gamescope/: exec.sh  interactive.sh
generic/generic-root-console/: image.info  interactive.sh
generic/generic-wayland/: exec.sh
generic/generic-x11/: README.md  interactive.sh
generic/generic-xwayland/: README.md  exec.sh  interactive.sh
images/image-u24/: build.sh  image.info  modify.sh
images/image-u24.10/: build-xwaylandvideobridge.sh  image.info  modify.sh  update.sh
setup/: image-default
setup/image-u24/: build-gamescope.sh  build-proton.sh  build-wine-affinity.sh  (+2 more)
setup/image-u24.10/: build-gamescope.sh  build.sh  test.sh  upgrade.sh
tools/: cdc-build  cdc-download  cdc-export-image-to-apptainer  cdc-in-container-launch  cdc-install  cdc-launch  cdc-launch-global  cdc-post-install  cdc-rebuild  cdc-redownload  cdc-refresh  cdc-reinstall  cdc-resetup  cdc-setup  cdc-update  cdc-update-check  cdc-update-if-needed  cdc-update-image  debug_protocol_handler.py  install.sh  launch-global.sh  launch.sh  post-install.sh  reinstall.sh  update-check.sh  update.sh
(+137 files in other folders)
